[build-system]
requires = ["chronver", "setuptools>=66"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "RadiaSoft LLC", email = "pip@radiasoft.net" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Utilities",
]
dependencies = [
    "h5py",
    "matplotlib",
    "numpy",
    "pykern",
    "scipy",
    "yt",
]
description = "Tools for performing and analyzing FLASH simulations of capillary discharge plasmas"
dynamic = ["version"]
name = "rsflash"
readme = "README.md"

[project.scripts]
rsflash = "rsflash.rsflash_console:main"

[project.urls]
Homepage = "https://git.radiasoft.org/rsflash"

[tool.setuptools.package-data]
rsflash = ["package_data/**"]

[tool.setuptools.packages.find]
include = ["rsflash*"]
